# asdf-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeFunctions.txt  CMakeLists.txt  LICENSE.md  README.rst  asdf-cpp-config-version.cmake.in  asdf-cpp-config.cmake.in  asdf-cpp.pc.cmake
examples/: CMakeLists.txt  read-asdf.cpp  read-compressed.cpp  write-asdf.cpp  write-compressed.cpp
examples/asdf-toy/: CMakeLists.txt  README.md  asdf-toy.cpp
include/: asdf.hpp  asdffile.hpp  block.hpp  block_manager.hpp  node.hpp
include/asdf-cpp/: asdf.hpp  asdffile.hpp  block.hpp  block_manager.hpp  byteswap.hpp  compression.hpp  datatypes.hpp  node.hpp
include/asdf-cpp/private/: compression.hpp  nodebuilder.hpp  parser.hpp
include/asdf-cpp/tags/: ndarray.hpp
include/private/: block.hpp  block_manager.hpp  datatypes.hpp  nodebuilder.hpp  parser.hpp
include/tags/: abstract_ndarray.hpp  ndarray.hpp
licenses/: README.rst
src/: asdf.cpp  asdffile.cpp  block.cpp  block_manager.cpp  compression.cpp  node.cpp  nodebuilder.cpp  nodebuilder.h  parser.cpp  validation.cpp
src/tags/: ndarray.cpp
test/: test.cpp
tests/: CMakeLists.txt  main.cpp  run-asdf.cpp  test.cpp  test_byteswap.cpp  test_datatype.cpp
tests/data/: test.asdf
tests/scripts/: CMakeLists.txt  read-asdf.cpp  write-asdf.cpp
